ADD:Assignment_3(d)-Flexbox

--- a/Assignment__2(d)/card.html
+++ b/Assignment__2(d)/card.html
@@ -23,7 +23,7 @@
                 </ul>
                 <ul class="account-cart">
                     <li>Account</li>
-                    <li> <i class="fa-solid fa-lock"></i></i> 3 Items</li>
+                    <li> <i class="fa-solid fa-lock" style="margin-right: 10px;"></i></i> 3 Items</li>
                     <img src="./../Assignment__1/image-qr-code.png" alt="Profile_pc" class="profile-pic">
                 </ul>
             </nav>
